Bug #25097 mysql_server_init fails silently if no errmsg.sys is present.

There was no way to return an error from the client library
if no MYSQL connections was established.
So here i added variables to store that king of errors and
made functions like mysql_error(NULL) to return these.